syntax = "proto3";

package internal;

option go_package = "internal";

message City {
    string iata = 1;
    string name = 2;
    string countryName = 3;
    string photoUrl = 4;
}

message Cities {
    repeated City values = 1;
}

message CityAutocomplete {
    string value = 1;
    string countryCode = 2;
}

message Country {
    string code = 1;
    string name = 2;
}

message Countries {
    repeated Country values = 1;
}

message CountryAutocomplete {
    string value = 1;
    string originIata = 2;
}

service Autocomplete {
    // Returns proposals for cities in the specified country.
    // If country is omit then returns proposals for all cities.
    rpc City(CityAutocomplete) returns (Cities);
    rpc Country(CountryAutocomplete) returns (Countries);
}
